--- a/CommandMod.csproj
+++ b/CommandMod.csproj
@@ -5,7 +5,7 @@
     <PropertyGroup>
         <TargetFramework>net472</TargetFramework>
         <AssemblyName>CommandMod</AssemblyName>
-        <Product>My first plugin</Product>
+        <Product>CommandMod</Product>
         <Version>1.0.0</Version>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
